tests/negative/test_message_error.orb
fnc main () () {
    message:error 100;
};